--- a/ecommerceAccenture/pom.xml
+++ b/ecommerceAccenture/pom.xml
@@ -35,18 +35,18 @@
         <version>14</version>
         <scope>system</scope>
         <systemPath>${basedir}\WebContent\WEB-INF\lib\ojdbc14.jar</systemPath>
-        
-        
-   
-        
-        
-      
         </dependency> 
 		<!-- https://mvnrepository.com/artifact/org.webjars/jquery -->
 		<dependency>
 		    <groupId>org.webjars</groupId>
 		    <artifactId>jquery</artifactId>
 		    <version>3.4.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+		<dependency>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>1.2.17</version>
 		</dependency>
 	</dependencies>
   <build>
